--- a/wemeet/templates/wemeet/lobby.html
+++ b/wemeet/templates/wemeet/lobby.html
@@ -11,8 +11,15 @@
             <h1>Welcome to Ask And Tell</h1>
             <p>A group Video Calling App</p>
         </div>
+        <form action="" id="form">
+            <div class="form-field">
+                <input type="submit" value = "Join Stream">
+            </div>
+        </form>
     </section>
 </main>
+
+<script type="text/javascript" src="{% static 'js/lobby.js' %}"></script>
 
 {% comment %} <h2>Lobby</h2> {% endcomment %}
 
