--- a/wemeet/templates/wemeet/room.html
+++ b/wemeet/templates/wemeet/room.html
@@ -8,14 +8,26 @@
         <p>Room Name : <span id="room-name"></span></p>
     </section>
 
-    <section id="video-streams">
+    <section id="video-streams"> </section>
         {% comment %} <div class="video-containers" id="user-container-1">
             <div class="username-wrapper"> <span class="user-name"></span>My Name</div>
             <div class="video-player" id="user-1"></div>
         </div> {% endcomment %}
-    </section>
-
+        <section id="controls-wrapper">
+            <div class="icon-wrappers">
+                <img src="{% static 'images/microphone.png'%}" alt="" id="mic-btn" class="control-icon">
+            </div>
+        
+            <div class="icon-wrappers">
+                <img src="{% static 'images/video-call.png'%}" alt="" id="camera-btn" class="control-icon">
+            </div>
+        
+            <div class="icon-wrappers">
+                <img src="{% static 'images/logout.png'%}" alt="" id="leave-btn" class="control-icon">
+            </div>
+        </section>
 </main>
+
 <script type="text/javascript" src="{% static 'assets/AgoraRTC_N-4.10.2.js' %}""></script>
 <script type="text/javascript" src="{% static 'js/streams.js' %}"></script>
 
