--- a/wemeet/templates/wemeet/index.html
+++ b/wemeet/templates/wemeet/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 
-{% load static  %}
+{% load static %}
 
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    {% comment %} <link rel="stylesheet" href="{% static 'styles/main.css' %}"> {% endcomment %}
+    {% comment %}
+    <link rel="stylesheet" href="{% static 'styles/main.css' %}" />
+    {% endcomment %}
 
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/main.css' %}">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{% static 'styles/main.css' %}"
+    />
     <title>Wemeet</title>
-</head>
-<body>
-
-   {% block content %}
-
-   {% endblock content %}
-</body>
+  </head>
+  <body>
+    {% block content %} {% endblock content %}
+  </body>
 </html>
