--- a/wemeet/templates/wemeet/lobby.html
+++ b/wemeet/templates/wemeet/lobby.html
@@ -11,9 +11,12 @@
             <h1>Welcome to Ask And Tell</h1>
             <p>A group Video Calling App</p>
         </div>
-        <form action="" id="form">
+        <form id="form">
             <div class="form-field">
-                <input type="submit" value = "Join Stream">
+                <input type="text" name="room", placeholder = "Enter a Room Name" style = "text-transform:uppercase;"/>
+            </div>
+            <div class="form-field">
+                <input type="submit" value = "Join Stream"/>
             </div>
         </form>
     </section>
@@ -22,5 +25,6 @@
 <script type="text/javascript" src="{% static 'js/lobby.js' %}"></script>
 
 {% comment %} <h2>Lobby</h2> {% endcomment %}
+
 
 {% endblock content %}
